# genai-tag-db-tools

./: .buildinfo  .gitattributes  .gitignore  .pylintrc  CLAUDE.md  CSVToDatabaseProcessor.py  Makefile  Notes_on_design.md  README.md  README_EN.md  cleanup_str.py  database_design.html  db_maintenance_tool.py  dev_guide.html  genindex.html  getting_started.html  hf_to_sqlite_tag_transfer.py  index.html  main.py  objects.inv  package_specification.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tag_database_explorer.ipynb  tag_search.py  tags_v3.db  test_tag_db.py  usage_guide.html
.claude/: settings.local.json
.cursor/rules/: coding-rules.mdc  debug.mdc  implement.mdc  memory.mdc  plan.mdc  rules.mdc
.cursor/rules/module_rules/: module-database-rules.mdc
.cursor/rules/test_rules/: testing-rules.mdc
.doctrees/: database_design.doctree  dev_guide.doctree  environment.pickle  getting_started.doctree  index.doctree  package_specification.doctree  usage_guide.doctree
.github/workflows/: python-package.yml
.roo/rules/: memory.mdc  rules.mdc
.roo/rules-architect/: plan.mdc
.roo/rules-code/: implement.mdc
.roo/rules-debug/: debug.mdc
.serena/cache/python/: document_symbols.pkl  raw_document_symbols.pkl
_sources/: database_design.rst.txt  getting_started.rst.txt  package_specification.rst.txt
docs/: architecture.md  cli.md  conf.py  database_design.rst  dev_guide.rst  getting_started.rst  index.rst  package_specification.rst  product_requirement_docs.md  technical.md  usage_guide.rst
docs/decisions/: 0001-cli-default-database-source-policy.md  0002-cli-gui-entrypoint-policy.md  0003-cli-jsonl-output-and-error-contract.md  0004-search-bounded-and-correct-pagination.md  0005-cli-command-introspection.md  0005-cli-introspection.md  0006-search-filter-pushdown-and-merged-pagination.md  0007-user-overlay-patch-db.md  0008-stable-public-api-boundary.md  0009-recommendation-advisory-and-feedback-routing.md  0010-okf-frontmatter-for-docs.md  0011-recommend-cli-followups.md  README.md  index.md
docs/investigations/: issue-63-cli-search-output.md
docs/superpowers/plans/: 2026-06-08-aliases-register.md
docs/superpowers/specs/: 2026-06-08-aliases-register-design.md
genai_tag_db_tools/: __init__.py  cleanup_str.py  config.py  main.py  tag_search.py
genai_tag_db_tools/core/: cleanup_str.py  db_maintenance_tool.py  import_data.py  processor.py  tag_search.py
genai_tag_db_tools/data/: database_schema.py  tag_repository.py  tags_v3.db  tags_v4.db
genai_tag_db_tools/db/: database_setup.py  db_maintenance_tool.py
genai_tag_db_tools/gui/designer/: MainWindow.ui  MainWindow_ui.py  ProgressWidget.ui  ProgressWidget_ui.py  TagCleanerWidget_ui.py  TagDataImportDialog.ui  TagDataImportDialog_ui.py  TagRegisterWidget.ui  TagRegisterWidget_ui.py  TagSearchWidget_ui.py  TagStatisticsWidget.ui  TagStatisticsWidget_ui.py
genai_tag_db_tools/gui/widgets/: tag_cleaner.py  tag_import.py  tag_register.py  tag_register_ui.py  tag_search.py  tag_search_ui.py  tag_statistics.py  tag_statistics_ui.py
genai_tag_db_tools/gui/windows/: 00.py  main_window.py
genai_tag_db_tools/services/: app_services.py  import_data.py  polars_schema.py  processor.py  tag_register.py  tag_search.py  tag_statistics.py
genai_tag_db_tools/utils/: cleanup_str.py  messages.py
gui/: MainWindow.py  MainWindow_ui.py  TagCleanerWidget.py  TagCleanerWidget_ui.py  TagRegisterWidget.py  TagRegisterWidget_ui.py  TagSearchWidget.py  TagSearchWidget_ui.py  TagStatisticsWidget.py  TagStatisticsWidget_ui.py
pyside_gui/genai-tag-db-tools/: TagSearchWidget.py  TagSearchWidget_ui.py  requirements.txt
scripts/: setup.sh
src/genai_tag_db_tools/: __init__.py  __main__.py  api.py  cli.py  core_api.py  errors.py  introspection.py  main.py  models.py
src/genai_tag_db_tools/core/: __init__.py  language_detection.py
src/genai_tag_db_tools/data/: database_schema.py  tag_repository.py  tags_v4.db
src/genai_tag_db_tools/db/: __init__.py  db_maintenance_tool.py  overlay_reader.py  query_utils.py  repository.py  runtime.py  schema.py  user_db_migration.py  user_tag_repository.py
src/genai_tag_db_tools/gui/: converters.py
src/genai_tag_db_tools/io/: __init__.py  hf_downloader.py
src/genai_tag_db_tools/services/: app_services.py  core_services.py  feedback_apply.py  import_data.py  polars_schema.py  tag_register.py  tag_search.py  tag_statistics.py
src/genai_tag_db_tools/utils/: cleanup_str.py  messages.py
tasks/: active_context.md  tasks_plan.md
test/: conftest.py  test_DanbooruJaTagBatch.py  test_database.py  test_tag_searcher.py
tests/: conftest.py  test_DanbooruJaTagBatch.py  test_database.py  test_gui_converters.py  test_tag_searcher.py
tests/gui/integration/: test_main_window_initialization.py
tests/gui/unit/: test_converters.py  (+11 more)
tests/resource/: case_03.csv  case_04.csv
tests/unit/: test_app_services.py  test_app_services_core_api_integration.py  test_base_patch_apply.py  test_base_patch_export.py  test_base_patch_models.py  test_base_patch_validate.py  test_cleanup_str.py  test_cli.py  test_cli_aliases_register.py  test_cli_errors.py  test_cli_feedback.py  test_cli_integration.py  test_cli_introspection.py  test_core_api.py  test_core_api_convert_tags.py  test_database_schema.py  test_db_feedback_proposals.py  test_db_maintenance_overlay.py  test_db_maintenance_tool.py  test_feedback_apply.py  test_feedback_apply_models.py  test_format_id_collision_avoidance.py  test_hf_downloader.py  test_import_data.py  test_language_detection.py  test_main.py  test_models.py  test_overlay_preferred_resolution.py  test_overlay_reader.py  test_overlay_refinement_recommendation.py  test_overlay_schema.py  test_overlay_translation_usage.py  test_public_api.py  test_query_utils.py  test_refinement_recommendation.py  test_runtime_engine_concurrency.py  test_tag_record_recommendation.py  test_tag_register.py  test_tag_register_service.py  test_tag_repository.py  (+8 more)
tools/: duplicate_file_checker.py  gitmv.bash  gitmv_ui_files.ps1  hf_to_sqlite_tag_transfer.py  migrate_v3_to_v4.py
(+43 files in other folders)
