[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-tag-db-tools"  # パッケージ名 ハイフン推奨なぜかは知らん
version = "0.2.2"
description = "AI生成画像のタグ管理ツール"  # プロジェクトの説明
readme = "README.md"
requires-python = ">=3.12"  # 必要なPythonバージョン
license = { text = "MIT" }
authors = [{ name = "NEXTAltair" }]


# プロジェクトの分類情報
classifiers = [
    "Operating System :: Microsoft :: Windows :: Windows 11"  # 対応OS
]

# 必要なパッケージの依存関係
dependencies = [
    "PySide6>=6.8.0.2", # Qt GUIフレームワーク
    "superqt>=0.6.7", # PySide6の拡張機能
    "polars[all]>=1.9.0", # 高性能データフレームライブラリ [all] は全機能をインストール必要ない部分は後で削る
    "alembic>=1.13.1", # データベースマイグレーションツール
    "sqlalchemy>=2.0.0", # データベースライブラリ
]

# 開発時のみ必要な追加パッケージ
[project.optional-dependencies]

[project.scripts]
tag-db = "genai_tag_db_tools.main:main"
#インストールして tag-db をターミナルで入力するとmainが実行されるよという話

[tool.ruff]
fix = true
line-length = 108
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF" # Ruff-specific rules
]
exclude = [
    "*/gui/designer/*", # Qtdesignerで自動生成されたファイル
    "*/__pycache__"
]

ignore = [
    "RUF002", # カタカナの `ノ` でのメッセージを無視
    "E501",   # Line too long (line-lengthで制御)
    "F541"   # f-string in logging (同等のpylint警告W1203 - Ruffでは直接の対応がない)
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

# pytestの設定オプション
[tool.pytest.ini_options]
pythonpath = ["src"]          # テスト実
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "-s", "-ra", "--tb=short", "--showlocals", "--cov=src", "--cov-report=xml"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "gui: GUI tests",
    "slow: Tests that take more time",
]


[tool.coverage.run]
source = ["src"]
omit = [
    "*/shibokensupport/*",
    "*/site-packages/*",
    "*/tests/*",
    "*/pyscript",
    "*/signature_bootstrap.py",
    "*/__init__.py",
    "*/__pycache__",
    "*/genai_tag_db_tools/gui/designer/*",
]

[tool.coverage.report]
fail_under = 75 # カバレッジが75%未満なら失敗
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",                  # ... (Ellipsis)
]

# ビルド設定
[tool.hatch.build.targets.wheel]
packages = ["src/genai_tag_db_tools"] # Pythonパッケージ名（アンダースコア）

[tool.hatch.build.targets.sdist]
# sdist用の設定が必要ならここに追加

[tool.hatch.build.targets.wheel.package-data]
genai_tag_db_tools = ["data/*.db"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "mypy>=1.8.0",
    "types-requests>=2.32.0",
    "types-Pillow",
    "types-toml",
    "alembic>=1.15.2",
    "psutil",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "restructuredtext_lint",
    "esbonio"
]

[project.urls]
Homepage = "https://github.com/NEXTAltair//genai-tag-db-tools"
Repository = "https://github.com/NEXTAltair//genai-tag-db-tools.git"
